<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:context = ".MainActivity">
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/app_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_observation"
        android:title="@string/app_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/clear_all"
        android:icon="@drawable/ic_clear_all_observation"
        android:title="@string/app_clear_all"
        app:showAsAction="always" />

</menu>